{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 14,
  "lineage": "955067bd-6da8-2051-2318-60b338ea2c38",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908435770206:internet-gateway/igw-0b936494a045f4cea",
            "id": "igw-0b936494a045f4cea",
            "owner_id": "908435770206",
            "tags": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0e4ce7972ced68def"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0677707b49f3fba2f",
            "owner_id": "908435770206",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b936494a045f4cea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-0e4ce7972ced68def"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc631b795e38023e",
            "route_table_id": "rtb-0677707b49f3fba2f",
            "subnet_id": "subnet-01eb1961cd50d0300"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.igw.aws_route_table.rt",
            "module.subnet.aws_subnet.public_subnets",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c7516cb83db5c4b",
            "route_table_id": "rtb-0677707b49f3fba2f",
            "subnet_id": "subnet-0e46936f93260e1fd"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.igw.aws_route_table.rt",
            "module.subnet.aws_subnet.public_subnets",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.manager_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "qa_manager_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e5657f6d3c3ea350",
            "arn": "arn:aws:ec2:eu-west-1:908435770206:instance/i-090b2d85dd09501de",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090b2d85dd09501de",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f992e683d3f1eb1f",
            "private_dns": "ip-172-160-0-85.eu-west-1.compute.internal",
            "private_ip": "172.160.0.85",
            "public_dns": "ec2-54-74-217-189.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.74.217.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-088fcbf948d873c52",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01eb1961cd50d0300",
            "tags": {
              "Name": "QA_Final_Project_Manager_Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f631830bb313a375"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.qa_final_project_sg",
            "module.subnet.aws_subnet.public_subnets",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "qa_final_project_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908435770206:security-group/sg-0f631830bb313a375",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f631830bb313a375",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "QAFinalProjectSG",
            "name_prefix": "",
            "owner_id": "908435770206",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0e4ce7972ced68def"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908435770206:subnet/subnet-01eb1961cd50d0300",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.160.0.0/24",
            "id": "subnet-01eb1961cd50d0300",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "908435770206",
            "tags": {
              "kubernetes.io/cluster/syed_cluster": "shared"
            },
            "vpc_id": "vpc-0e4ce7972ced68def"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908435770206:subnet/subnet-0e46936f93260e1fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.160.1.0/24",
            "id": "subnet-0e46936f93260e1fd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "908435770206",
            "tags": {
              "kubernetes.io/cluster/syed_cluster": "shared"
            },
            "vpc_id": "vpc-0e4ce7972ced68def"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908435770206:vpc/vpc-0e4ce7972ced68def",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.160.0.0/16",
            "default_network_acl_id": "acl-0218dca42d4df3673",
            "default_route_table_id": "rtb-0868b126236275428",
            "default_security_group_id": "sg-0a6ad6c98e826c356",
            "dhcp_options_id": "dopt-09b38387a05d69555",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e4ce7972ced68def",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0868b126236275428",
            "owner_id": "908435770206",
            "tags": {
              "Name": "VPC_PROJECT"
            }
          }
        }
      ]
    }
  ]
}